--- a/config/enki.yml
+++ b/config/enki.yml
@@ -1,7 +1,7 @@
 # Configuration options for your blog - customise to taste
 # This file contains no secret information, so can be stored in source control (unlike database.yml)
 title: Code Ninja
-url:   http://hjp.im
+url:   http://www.hjp.im
 author:
   name:    Jinpu Hu # For copyright notice and ATOM feeds
   email:   hujinpu@gmail.com # Exception emails will go here, and it is used in ATOM feeds
